# dt4mob-texture-creation

./: .gitignore  Dockerfile  README.md  config.toml.example  flake.nix  main.py  pyproject.toml  settings.py
.github/workflows/: build-image.yml
docs/: admin.md  user.md
src/: api.py  colormap.py  config.py  mesh.py  models.py  s3.py
